--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --option development --open --config webpack.config.js",
-    "build": "webpack --option production --config webpack.config.js"
+    "start": "webpack-dev-server --mode development --open --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
